<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="50dp"
    android:paddingVertical="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="30dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/bg_dialog_quit"
        >

        <TextView

            style="@style/list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_exit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_positive"
                style="@style/button_green_border"
                android:layout_weight="1"
                android:text="@string/ok"
                android:layout_marginEnd="17dp"/>

            <Button
                android:id="@+id/btn_negative"
                style="@style/button_green"
                android:layout_marginStart="17dp"
                android:layout_weight="1"
                android:text="@string/cencel" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>