<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="30dp"
    android:paddingBottom="45dp"
    style="@style/AppBottomSheetDialogTheme">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:paddingHorizontal="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/nointernetaccess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/youseems"
        style="@style/list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_seems_to_be_offline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/textView4"
        style="@style/secondary_text_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:text="@string/check_your_wifi_connection_or_cellular_data_and_try_again"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youseems" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <Button
            android:id="@+id/btn_try"
            style="@style/button_green"
            android:layout_weight="1"
            android:text="@string/try_again" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>