<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="16dp"
            android:paddingHorizontal="20dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/person" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/paragraph_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/name" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_star_rate"
                            android:contentDescription="@string/foto_deskripsi" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_star_rate"
                            android:contentDescription="@string/foto_deskripsi" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_star_rate"
                            android:contentDescription="@string/foto_deskripsi" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_star_rate"
                            android:contentDescription="@string/foto_deskripsi" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_star_rate"
                            android:contentDescription="@string/foto_deskripsi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="11dp"
                            android:text="@string/separate" />

                        <LinearLayout
                            android:layout_width="56dp"
                            android:layout_height="18dp"
                            android:layout_marginStart="11dp"
                            android:background="@drawable/btn_login_signup"
                            android:padding="0dp">

                            <TextView
                                style="@style/secondary_text_caption"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/halal"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/paragraph_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:paddingEnd="50dp"
                android:text="@string/review"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

</androidx.cardview.widget.CardView>